# ComfyUI_Workflow_Vault

./: .comfyignore  .gitignore  README.md  __init__.py  package.ps1  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish_action.yml
sample_vault/: folders.json  vault_settings.json
sample_vault/entries/audio_cleanup_test/: manifest.json  notes.json  notes.md
sample_vault/entries/audio_cleanup_test/examples/example_001/: example.json
sample_vault/entries/audio_cleanup_test/versions/v001/: version.json  workflow.json
sample_vault/entries/image_cleanup_test/: README.md  best_practices.md  manifest.json  notes.json  notes.md
sample_vault/entries/image_cleanup_test/examples/example_001/: example.json
sample_vault/entries/image_cleanup_test/versions/v001/: version.json  workflow.json
sample_vault/entries/image_cleanup_test/versions/v002/: version.json  (+1 more)
sample_vault/entries/video_motion_test/: README.md  manifest.json  notes.json  notes.md
web/: vault_api.js  vault_app.js  vault_canvas_media.js  vault_compare_slider.js  vault_detail.js  vault_docs_tab.js  vault_dom.js  vault_examples_tab.js  vault_folders.js  vault_global_settings.js  vault_image.js  vault_markdown.js  vault_media_picker.js  vault_modal.js  vault_notes_editor.js  vault_tag_input.js  vault_thumbnail_input.js  vault_versions_tab.js  vault_wizard.js  vault_workflow.js  workflow_vault.css  workflow_vault.js
workflow_vault/: api.py  config.py  entries.py  examples.py  exporting.py  folders.py  media.py  storage.py  utils.py  versions.py  video.py
(+2 files in other folders)
